plain text .world files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="buttons-top">
                     <button id="saveButton" title="Welt speichern" onClick="saveFile('territory')"><img src="./images/speichern.png"></button>
                     <button id="loadButton" title="Welt laden" onClick="loadFile('territory')"><img src="./images/laden.png"></button>
-                    <input type="file" id="file-input-territory" />
+                    <input type="file" id="file-input-territory" accept=".world" />
                     <div class="controls">
                         <input id="slider" title="20" type="range" min="0" max="100" value="20" step="5" oninput="setSpeed(this.value)" />
                         <button id="playButton" title="Ausführen" onClick="runCode()"><img src="./images/play.png"></button>
