--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./scripts/modifiableScripts/CellContent.js"></script>
     <script src="./scripts/modifiableScripts/actorMethods.js"></script>
     <script src="./scripts/modifiableScripts/saveLoadTerritory.js"></script>
+    <script src="./scripts/modifiableScripts/keyboardShortcuts.js"></script>
     <script src="./scripts/modifiableScripts/mainModifiable.js"></script>
     <meta charset="utf-8">
     <title> Blockly Kara Simulator </title>
