Change default options for loading and saving code

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="topnav" id="topnav">
                     <a id="save" onclick="saveFile('code')">Programm speichern</a>
                     <a id="load" onclick="loadFile('code')">Programm laden</a>
-                    <input type="file" id="file-input-code" />
+                    <input type="file" id="file-input-code" accept=".karacode" />
                 </div>
                 <div id="blocklyArea" class="blocklyArea"></div>
                 <div id="blocklyDiv" style="position: absolute">
