--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a id="toggle-blocks-code" class="blocks-active" onclick="toggleCodeDisplay()">anzeigen</a>
                 </div>
                 <div id="blocklyArea" class="blocklyArea"></div>
-                <div id="blocklyDiv" style="position: absolute">
+                <div id="blocklyDiv" class="display-blocks" style="position: absolute">
                     <xml id="toolbox" style="display: none">
                         <category name="Kara-Kommandos" colour="260">
                             <block type="forward"></block>
