Add accesibility on buttons for saving/loading the program.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </div>
             <div class="rightbox" id="rightbox">
                 <div class="topnav" id="topnav">
-                    <a id="save" onclick="saveFile('code')">💾 Programm speichern</a>
-                    <a id="load" onclick="loadFile('code')">📁 Programm laden</a>
+                    <a id="save" onclick="saveFile('code')"><span aria-role="img" aria-hidden="true">💾</span> Programm speichern</a>
+                    <a id="load" onclick="loadFile('code')"><span role="img" aria-hidden="true">📁</span> Programm laden</a>
                     <input type="file" id="file-input-code" accept=".karacode" />
                 </div>
                 <div id="blocklyArea" class="blocklyArea"></div>
