Replace some textual images with real text.

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <canvas id="territoryId" class="territory" ondrop="drop(event)" ondragover="allowDrop(event)"></canvas>
                 <div class="buttons-bottom">
                     <div class="grid">
-                        <img src="./images/groesse.png" id="size">
+                        Größe
                         <input type="number" class="spinner" name="row" value="9" min="2" max="20" id="row" required>
                         <input type="number" class="spinner" name="column" min="2" id="column" required>
-                        <button type="submit" title="Bestätigen: Größe der Welt ändern" value="Ok" class="okbutton" onclick="resizeTerritory()"><img src="images/ok.png"></button>
+                        <button type="submit" title="Bestätigen: Größe der Welt ändern" value="Ok" class="okbutton" onclick="resizeTerritory()">OK</button>
                     </div>
                     <button class="element" title="Stumpf platzieren" id="tree"><img src="./images/stump_2.png" id="treeImage" alt="stump" draggable="true" ondragstart="drag(event)" ontouchstart="dragTouch(event)"></button>
                     <button class="element" title="Kleeblatt platzieren" id="clover"><img src="./images/clover.png" id="leafImage" alt="clover" draggable="true" ondragstart="drag(event)" ontouchstart="dragTouch(event)"></button>
